# autoconf

./: configure.ac
src/: Makefile.am
src/test/: Makefile.am
